# context

./: .gitignore  .mcp.json  Cargo.toml  README.md
.claude/: settings.json
.claude/skills/using-documentation/: SKILL.md
.context/: index.md
.context/guides/: contributing-to-the-cli.md  core.md  index.md
.context/references/: index.md
src/: error.rs  lib.rs  main.rs
src/cli/: args.rs  commands.rs  mod.rs  output.rs
src/core/: cache.rs  discovery.rs  document.rs  frontmatter.rs  mod.rs  models.rs  paths.rs
src/mcp/: server.rs
tests/: sync.rs
