[package]
name = "context"
version = "0.1.0"
edition = "2021"
authors = ["R. Conner Howell"]

[dependencies]
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
sha2 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
glob = "0.3"
walkdir = "2.4"
rmcp = { version = "0.14.0", features = ["server", "transport-io"] }
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3.8"
assert_fs = "1.0"

[lints.clippy]
pedantic = "deny"
